// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
"<div className=\\"content-container\\">
  <div className=\\"list-header\\">
    <div className=\\"show-for-mobile\\">
      Expenses
    </div>
    <div className=\\"show-for-desktop\\">
      Expense
    </div>
    <div className=\\"show-for-desktop\\">
      Amount
    </div>
  </div>
  <div className=\\"list-body\\">
    <div className=\\"list-item list-item--message\\">
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>"
`;

exports[`should render ExpenseList with expenses 1`] = `
"<div className=\\"content-container\\">
  <div className=\\"list-header\\">
    <div className=\\"show-for-mobile\\">
      Expenses
    </div>
    <div className=\\"show-for-desktop\\">
      Expense
    </div>
    <div className=\\"show-for-desktop\\">
      Amount
    </div>
  </div>
  <div className=\\"list-body\\">
    <ExpenseListItem id=\\"1\\" description=\\"Gum\\" note=\\"\\" amount={195} createdAt={0} />
    <ExpenseListItem id=\\"2\\" description=\\"Rent\\" note=\\"\\" amount={109500} createdAt={-345600000} />
    <ExpenseListItem id=\\"3\\" description=\\"Credit Card\\" note=\\"\\" amount={4500} createdAt={345600000} />
  </div>
</div>"
`;
